@@ -3,6 +3,7 @@ Next version (not yet released)
 
  * Upgrades union_station_hooks_core to version 2.1.2.
  * [Enterprise] When running a Rails app in multithreaded mode, Passenger Enterprise automatically tags Rails logs with the current thread number. This makes it possible to distinguish logs generated by different threads.
+ * The TempDirToucher will now periodically reduce its privileges, which also allows it to be killed when passenger is quit in more circumstances. Closes GH-1678.
 
 
 Release 5.0.30
